# nyini

./: LICENSE  README.md  pyproject.toml
scripts/: install_linux_desktop.sh  uninstall_linux_desktop.sh
src/: app.py  i18n.py  main.py
src/application/: commands.py  services.py  use_cases.py
src/assets/styles/: app_dark.qss  app_light.qss
src/config/: app_info.py  paths.py  settings.py  shortcuts.py
src/domain/: enums.py  models.py
src/infrastructure/db/: connection.py  repositories.py  schema.sql
src/infrastructure/filesystem/: mover.py  scanner.py  trash.py  watcher.py
src/infrastructure/gowall/: client.py
src/infrastructure/imaging/: hashing.py  metadata.py  thumbnails.py
src/infrastructure/wallhaven/: __init__.py  client.py
src/infrastructure/wallpaper/: backend.py
src/ui/: main_window.py  shortcuts.py  theme.py
src/ui/dialogs/: duplicate_review_dialog.py  gowall_theme_dialog.py  history_dialog.py  onboarding_dialog.py  settings_dialog.py  shortcuts_dialog.py  wallhaven_dialog.py
src/ui/models/: wallpaper_model.py
src/ui/views/: details_panel.py  grid_view.py  sidebar.py  viewer.py
src/workers/: gowall_preview_worker.py  index_worker.py  job_queue.py  preload_worker.py  thumbnail_worker.py  wallhaven_search_worker.py
tests/: conftest.py  test_advanced_features.py  test_commands.py  test_db.py  test_duplicate_review.py  test_foundations.py  test_gowall.py  test_linux_portability.py  test_scanner.py  test_ui_interactions.py  test_ui_smoke.py  test_video_wallpapers.py  test_wallhaven.py  test_workers.py
